# computer-graphics-game

./: .gitignore  CG-Game.cbp  CG-Game.depend  CG-Game.layout  README.md  TODO.md
assets/audio/music/: Epic Chase by MaxKoMusic - Chosic.txt  Sport Racing Car _ DRIVE by Alex-Productions - Chosic.license.txt
assets/models/bush/: Bush.mtl
assets/models/coin/: coin.mtl
assets/models/logs/: logs.mtl
assets/models/rock/: rock.mtl
scripts/: CMakeLists.txt  build.sh  run.sh
sdltest/: sdltest.cbp
sdlteste/: sdlteste.cbp
src/: coin.c  coin.h  geometry.h  main.c  main.cpp  menu.c  menu.cpp  model.c  obstacle.c  obstacle.h  player.c  player.h
src/ecs/: component.c  component.cpp  component.h  entity.c  entity.cpp  entity.h  system.c  system.cpp  system.h
src/ecs/components/: coin.c  coin.h  floor.c  floor.h  model.c  model.h
src/ecs/systems/: hud.c  menu.c  menu.h  music_bus.c  music_bus.h  ranking.c  ranking.h
src/game/: obstacle.c  obstacle.h  player.c  player.h  state.c  state.h  tree.c  tree.h
src/game_objects/: test.c  test.cpp  test.h
src/utils/: basics.h  file_system.c  file_system.h  print.c  print.h
std2-test2/: std2-test2.cbp
